packages/kit/test/apps/basics/src/routes/load/invalidation/search-params/layout/+layout.js
let count = 0;

export function load({ url: { searchParams } }) {
	searchParams.get('test');
	return {
		count: count++
	};
}
